chatting/src/main/java/com/example/chatting/global/error/exception/BaseException.java
package com.example.chatting.global.error.exception;

import lombok.Getter;

@Getter
public class BaseException extends RuntimeException{
    private final ErrorCode errorCode;

    public BaseException(ErrorCode errorCode) {
        super();
        this.errorCode = errorCode;
    }
}